display: migrate to angular

--- a/5.0/display/src/Styles.xml.handlebars
+++ b/5.0/display/src/Styles.xml.handlebars
@@ -1,15 +1,14 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
 
-
   <style key="vocatic_display_2019"
-          file="List.cshtml" preview="preview_list.png"
-         interactive="false" target="Forms2">
+          file="index.cshtml" preview="assets/img/preview_list.png"
+         interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis list ({{version}})</name>
     </names>
     <fields>
-      <field key="source">
+      <field key="source1">
         <names>
           <name>Warteschlange</name>
         </names>
@@ -21,16 +20,16 @@
         </names>
          <content_class type="TextChoose">
           <text key="">Keine</text>
-          <text key="assets/tone.mp3">Standard</text>
-          <text key="assets/done-for-you-612.mp3">Done for you</text>
-          <text key="assets/eventually-590.mp3">Eventually</text>
-          <text key="assets/goes-without-saying-609.mp3">Goes without saying</text>
-          <text key="assets/happy-ending-415.mp3">Happy ending</text>
-          <text key="assets/inflicted-601.mp3">Inflicted</text>
-          <text key="assets/no-more-waiting-209.mp3">No more waiting</text>
-          <text key="assets/piece-of-cake-611.mp3">Piece of cake</text>
-          <text key="assets/quite-impressed-565.mp3">Quite impressed</text>
-          <text key="assets/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
+          <text key="assets/audio/tone.mp3">Standard</text>
+          <text key="assets/audio/done-for-you-612.mp3">Done for you</text>
+          <text key="assets/audio/eventually-590.mp3">Eventually</text>
+          <text key="assets/audio/goes-without-saying-609.mp3">Goes without saying</text>
+          <text key="assets/audio/happy-ending-415.mp3">Happy ending</text>
+          <text key="assets/audio/inflicted-601.mp3">Inflicted</text>
+          <text key="assets/audio/no-more-waiting-209.mp3">No more waiting</text>
+          <text key="assets/audio/piece-of-cake-611.mp3">Piece of cake</text>
+          <text key="assets/audio/quite-impressed-565.mp3">Quite impressed</text>
+          <text key="assets/audio/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
           <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
@@ -63,8 +62,8 @@
 
 
   <style key="vocatic_display3_2019"
-          file="List3.cshtml" preview="preview_listmulti.png"
-         interactive="false" target="Forms2">
+          file="index.cshtml" preview="assets/img/preview_multilist.png"
+         interactive="false" target="chromium">
     <names>
       <name culture="de">vocatis list multi ({{version}})</name>
     </names>
@@ -83,16 +82,16 @@
         </names>
          <content_class type="TextChoose">
           <text key="">Keine</text>
-          <text key="assets/tone.mp3">Standard</text>
-          <text key="assets/done-for-you-612.mp3">Done for you</text>
-          <text key="assets/eventually-590.mp3">Eventually</text>
-          <text key="assets/goes-without-saying-609.mp3">Goes without saying</text>
-          <text key="assets/happy-ending-415.mp3">Happy ending</text>
-          <text key="assets/inflicted-601.mp3">Inflicted</text>
-          <text key="assets/no-more-waiting-209.mp3">No more waiting</text>
-          <text key="assets/piece-of-cake-611.mp3">Piece of cake</text>
-          <text key="assets/quite-impressed-565.mp3">Quite impressed</text>
-          <text key="assets/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
+          <text key="assets/audio/tone.mp3">Standard</text>
+          <text key="assets/audio/done-for-you-612.mp3">Done for you</text>
+          <text key="assets/audio/eventually-590.mp3">Eventually</text>
+          <text key="assets/audio/goes-without-saying-609.mp3">Goes without saying</text>
+          <text key="assets/audio/happy-ending-415.mp3">Happy ending</text>
+          <text key="assets/audio/inflicted-601.mp3">Inflicted</text>
+          <text key="assets/audio/no-more-waiting-209.mp3">No more waiting</text>
+          <text key="assets/audio/piece-of-cake-611.mp3">Piece of cake</text>
+          <text key="assets/audio/quite-impressed-565.mp3">Quite impressed</text>
+          <text key="assets/audio/slow-spring-board-longer-tail-571.mp3">Slow spring board</text>
           <text key="~speechurl~?voice=Microsoft Hedda Desktop&amp;text=~number~ bitte zu ~room~">Sprachausgabe (Hedda)</text>
         </content_class>
       </field>
