printer: Feld Referenz für Termine eingebaut

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -105,6 +105,12 @@
   </names>
   <content_class bind="Column" parentField="import" type="TextFree" />
 </field>
+<field key="ref">
+  <names>
+    <name>Referenz</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
 <field key="date">
   <names>
     <name>Datum</name>
