--- a/5.0/printer/src/app/app.component.scss
+++ b/5.0/printer/src/app/app.component.scss
@@ -2,11 +2,11 @@
 
 :host:not(.view-print) {
   display: block;
-  padding: 0 15vw;
 }
 
 header {
   margin: 0 0 4vh 0;
+  padding: 0 15vw;
   display: flex;
   align-items: flex-end;
   gap: 2vw;
@@ -18,6 +18,10 @@ header {
     margin-left: auto;
     img { width: 7vw; }
   }
+}
+
+main {
+  padding: 0 15vw;
 }
 
 h1 {
