--- a/5.0/printer/src/app/select-queue/select-queue.component.html
+++ b/5.0/printer/src/app/select-queue/select-queue.component.html
@@ -19,8 +19,8 @@
           <svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 0.0,20.0 Z" /></g></svg>
           <h5>{{ button.title }}</h5>
           <div class="queue-status">
-            <span *ngIf="button.queueLength > 3">{{ "List_StatusMT3FormatRaw" | translate: button.queueLength }}</span>
-            <span *ngIf="button.queueLength <= 3">{{ "List_StatusLT3FormatRaw" | translate: button.queueLength }}</span>
+            <span *ngIf="button.queueLength > 3">{{ "List_StatusMT3FormatRaw" | translate: { length: button.queueLength } }}</span>
+            <span *ngIf="button.queueLength <= 3">{{ "List_StatusLT3FormatRaw" | translate: { length: button.queueLength } }}</span>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
               <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
               <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
