printer: Fix svg text color

--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -88,6 +88,7 @@ table {
       align-items: center;
       background-color: $color-primary-background;
       color:$color-primary-foreground;
+      fill: $color-common-foreground;
       
       span {
         padding: 0 0.5vw;
