printer: reduce app link size

--- a/5.0/printer/src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/src/environments/environment.prod.ts.handlebars
@@ -7,6 +7,6 @@ export const environment = {
   enableMultilang: {{multilang}},
   enableOpenClose: {{enable_open_close}},
   enableApp: {{enable_app}},
-  appUrl: "../app/index.cshtml",
+  appUrl: "../app",
   idleTimeout: 10000
 };
