--- a/5.0/printer/src/app/ticket/ticket.component.scss
+++ b/5.0/printer/src/app/ticket/ticket.component.scss
@@ -2,17 +2,23 @@
 :host {
   display: block;
   /* paper: 448dots / 58mm, paper-margin 1mm */
-  /* complete drawing width of printer: 220px */
-  width: 56mm;
+  /* complete drawing width of printer: 228px */
+  box-sizing: border-box;
+  width: 228px;
+  padding: 1mm;
 
+  background-color: white;
   color: black;
-  text-align: center; 
+  text-align: center;
+
+  font-weight: bold;
 }
 header{ 
   font-size: 12px;
 }
 h1 {
   font-size: 40px;
+  margin: 5mm 0;
 }
 img {
   width: 100%;
@@ -21,12 +27,10 @@ img {
 footer {
   display: flex;
   align-items: center;
-  gap: 5mm;
+  padding: 2mm;
+  gap: 2mm;
   &>* {
     flex: 1;
-  }
-  figure {
-    padding-left: 5px;
   }
   figcaption {
     font-size: 12px;
