printer: appointment Feld-Bezeichnungen abgestimmt

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -65,13 +65,13 @@
 
 {{#*inline "appointmentFields"}}
 {{#range 1 9}}
-<field key="plan_name{{this}}">
+<field key="ap_pn{{this}}">
   <names>
     <name>Terminplan {{this}}</name>
   </names>
   <content_class type="TextFree" />
 </field>
-<field key="queueid{{this}}_apt">
+<field key="ap_qi{{this}}">
   <names>
     <name>Warteschlange Termin {{this}}</name>
   </names>
