printer: Handle postpone of dismissed number correctly

--- a/5.0/printer/src/number.cshtml
+++ b/5.0/printer/src/number.cshtml
@@ -32,8 +32,8 @@
   }
 
   // postpone
-  if (!String.IsNullOrEmpty(postpone)) {
-    voc.PostponeNumber(ticket.Id, DateTime.Today + TimeSpan.Parse(postpone));
+  if (!String.IsNullOrEmpty(postpone) && ticket.State != WaitNumberState.Dismissed) {
+    voc.PostponeNumber(ticket.Id, DateTime.Parse(postpone));
   }
 
   Response.ContentType="application/json";
