--- a/5.0/printer/src/app/entry-select/entry-select.component.html
+++ b/5.0/printer/src/app/entry-select/entry-select.component.html
@@ -2,7 +2,7 @@
   <h2>{{ "Entry_Header1" | translate }}</h2>
   <h3>{{ "Entry_Header2" | translate }}</h3>
 </div>
-<textarea id="scan" (keydown)="onScanInput($event)" fixedfocus></textarea>
+<textarea id="scan" (keydown)="onScanInput($event)" fixedfocus spellcheck="false"></textarea>
 
 <nav class="site-nav">
   <a routerLink="/scan-appointment" queryParamsHandling="preserve" >{{ "Entry_SelectAppointment" | translate }}</a>
