--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -2,4 +2,4 @@
   <img src="assets/img/direction.png" alt="direction">
   <h1>{{ "Appoint_Scan" | translate }}</h1>
 </section>
-<textarea id="scan" (keydown)="onScanInput($event)" fixedfocus></textarea>
+<textarea id="scan" (keydown)="onScanInput($event)" fixedfocus spellcheck="false"></textarea>
