--- a/5.0/printer/app_src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/app_src/environments/environment.prod.ts.handlebars
@@ -2,5 +2,6 @@ export const environment = {
   production: true,
   statusServiceUrl: "status.cshtml",
   numberServiceUrl: "number.cshtml",
+  enableMultilang: {{multilang}},
   refreshInterval: 10 * 1000 /* ms */
 };
