printer: Option für Datumsformat eingeführt

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -117,6 +117,16 @@
   </names>
   <content_class bind="Column" parentField="import" type="TextFree" />
 </field>
+<field key="datef">
+  <names>
+    <name>Datumsformat</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="de-de">Deutschland</text>
+    <text key="en-us">USA</text>
+    <text key="iso8601">ISO 8601</text>
+  </content_class>
+</field>
 <field key="time">
   <names>
     <name>Uhrzeit</name>
