--- a/5.0/api/Styles.xml.handlebars
+++ b/5.0/api/Styles.xml.handlebars
@@ -4,7 +4,7 @@
          file="GetTicket.cshtml"
          target="Forms2">
     <names>
-      <name culture="de">Vocatis API (NICHT EINPLANEN)</name>
+      <name culture="de">Vocatis API (NICHT EINPLANEN) ({{version}})</name>
     </names>
     <fields>
       <field key="queueid1">
