printer: erweiterte Szenarien (IS-579)

--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -93,6 +93,27 @@
     <text key="1">Ja</text>
   </content_class>
 </field>
+<field key="lt">
+  <names>
+    <name>Zu spät ab</name>
+  </names>
+    <content_class type="TextChoose">
+    <text key="">Nie</text>
+    <text key="0">Sofort</text>
+    <text key="1">1 min</text>
+    <text key="5">5 min</text>
+    <text key="10">10 min</text>
+    <text key="15">15 min</text>
+    <text key="30">30 min</text>
+    <text key="60">60 min</text>
+  </content_class>
+</field>
+<field key="aei">
+  <names>
+    <name>Terminfehler Info</name>
+  </names>
+  <content_class type="TextFree" />
+</field>
 <field key="import">
   <names>
     <name>Termine</name>
