--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.html
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.html
@@ -3,14 +3,34 @@
     <h3>{{ "Appoint_Loading" | translate }}</h3>
   </ng-container>
   <ng-container *ngSwitchCase="'invalid'">
-    <h3>{{ "Appoint_InvalidHeader" | translate }}</h3>
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_InvalidHeader" | translate }}</h3>
     <p>{{ "Appoint_InvalidText" | translate }}</p>
+    <p>{{ errorInfo }}</p>
   </ng-container>
   <ng-container *ngSwitchCase="'notfound'">
-    <h3>{{ "Appoint_NotFoundHeader" | translate }}</h3>
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_NotFoundHeader" | translate }}</h3>
+    <p>{{ "Appoint_NotFoundText" | translate }}</p>
+    <p>{{ errorInfo }}</p>
+  </ng-container>
+  <ng-container *ngSwitchCase="'notfound_early'">
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_NotFoundEarlyHeader" | translate }}</h3>
+    <p>{{ "Appoint_NotFoundEarlyText" | translate: {date: aptDate | date: 'longDate':undefined:locale, time: aptDate | date: 'shortTime':undefined:locale}  }}</p>
+    <p>{{ errorInfo }}</p>
+  </ng-container>
+  <ng-container *ngSwitchCase="'notfound_late'">
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_NotFoundLateHeader" | translate }}</h3>
+    <p>{{ "Appoint_NotFoundLateText" | translate: {date: aptDate | date: 'longDate':undefined:locale, time: aptDate | date: 'shortTime':undefined:locale}  }}</p>
+    <p>{{ errorInfo }}</p>
   </ng-container>
   <ng-container *ngSwitchCase="'noqueue'">
-    <h3>{{ "Appoint_TicketNoQueue" | translate }}</h3>
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_NoQueueHeader" | translate }}</h3>
+    <p>{{ "Appoint_NoQueueText" | translate }}</p>
+    <p>{{ errorInfo }}</p>
+  </ng-container>
+  <ng-container *ngSwitchCase="'late'">
+    <h3><img src="assets/img/error.png" id="error" alt="error" /> {{ "Appoint_LateHeader" | translate }}</h3>
+    <p>{{ "Appoint_LateText" | translate: {date: aptDate | date: 'longDate':undefined:locale, time: aptDate | date: 'shortTime':undefined:locale} }}</p>
+    <p>{{ errorInfo }}</p>
   </ng-container>
   <ng-container *ngSwitchCase="'qr'">
     <h3>
