--- a/5.0/printer/src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/src/environments/environment.prod.ts.handlebars
@@ -8,5 +8,6 @@ export const environment = {
   enableOpenClose: {{enable_open_close}},
   enableApp: {{enable_app}},
   appUrl: "../app",
-  idleTimeout: 10
+  idleTimeout: 10,
+  appointmentTimeout: 5
 };
