--- a/5.0/printer/src/environments/environment.prod.ts.handlebars
+++ b/5.0/printer/src/environments/environment.prod.ts.handlebars
@@ -9,5 +9,6 @@ export const environment = {
   enableApp: {{enable_app}},
   appUrl: "../app",
   idleTimeout: 10,
-  appointmentTimeout: 5
+  appointmentTimeout: 5,
+  showLogo: true
 };
