--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -38,20 +38,41 @@
     text-align: center;
   }
 
+  h6 {
+    font-size: 4rem;
+    text-align: center;
+    color: $color-highlight-background;
+  }
+
   .single-button {
-    width: 10vh;
-    height: 10vh;
+    box-sizing: border-box;
+    aspect-ratio: 1;
+    height: 100%;
     border: solid 1vh;
     padding: 2vh;
-    @media (orientation: portrait) {
-      width: 20vw;
-      height: 20vw;
-      border: solid 2vw;
-      padding: 4vw;
-    }
     border-radius: 50%;
     background-clip: content-box;
     background-color: $color-common-foreground;
+  }
+
+  .queue-status {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    grid-auto-flow: column;
+    gap: 1vh 5vw;
+
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    color: $color-secondary-foreground;
+
+    & > * {
+      justify-self: center;
+    }
+    svg {
+      height: 100%;
+    }
   }
 
   svg.person {
@@ -77,12 +98,13 @@
   }
 
   &.with-qr-code {
-    grid-template-columns: 1fr 15%;
+    grid-template-columns: 1fr 10vw;
     grid-template-rows: auto;
     text-align: center;
     font-size: 1.3rem;
     > span:first-child {
-      padding-left: 70%;
+      justify-self: end;
+      width: 21vw;
     }
   }
 
@@ -93,7 +115,7 @@
   .btn {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 30%;
+    grid-template-columns: 1fr 21vw;
     background-color: $color-secondary-background;
     color: $color-secondary-foreground;
     text-align: center;
@@ -116,34 +138,47 @@
     }
 
     & > div {
-      box-sizing: border-box;
-      font-size: 0.9em;
+      /* all status */
+      font-weight: bold;
+      font-size: 1rem;
+      padding: 0.5vh 0.5vw;
+      gap: 0.5vh 0.5vw;
+      overflow: hidden;
     }
     &.closed > div {
       background-color: $color-highlight-background;
       color: $color-highlight-foreground;
-      font-weight: bold;
+
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 0 0.5vw;
     }
     & > div.queue-status {
       display: grid;
-      grid-template-columns: 1fr 1fr;
+      &:not(.queue-status-columns) {
+        grid-template-rows: 4fr 3fr;
+        grid-auto-flow: column;
+        padding-top: 2vh;
+        font-size: 1.2rem;
+      }
+      &.queue-status-columns {
+        grid-template-columns: 4fr 2fr;
+        grid-auto-flow: row;
+        padding-top: 0.5vh;
+      }
+
+      & > * {
+        overflow: hidden;
+        max-height: 100%;
+        max-width: 100%;
+      }
 
       align-items: center;
+      justify-items: center;
+
       background-color: $color-primary-background;
       color: $color-primary-foreground;
       fill: $color-common-foreground;
-
-      span {
-        padding: 0 0.5vw;
-      }
-      svg {
-        max-height: 80%;
-        margin: 0 auto;
-      }
     }
     &.next-one > .queue-status svg.person {
       opacity: 0.5;
@@ -153,14 +188,12 @@
     }
   }
 
-  svg.person {
+  svg.person,
+  svg.clock {
     fill: $color-primary-foreground;
     .cls-2 {
       fill: $color-primary-background;
+      font-size: 2rem;
     }
-  }
-
-  svg.clock {
-    fill: $color-primary-foreground;
   }
 }
