--- a/5.0/printer/app_src/app/app.component.html
+++ b/5.0/printer/app_src/app/app.component.html
@@ -1,10 +1,12 @@
 <header>
-  <img src="assets/img/plattform_01.png" alt="plattform">
-  <h1><span>{{ "App_Title_a" | translate }}</span> {{ "App_Title_b" | translate }}</h1>
+  <img src="assets/img/plattform_01.png" alt="plattform" />
+  <h1>
+    <span>{{ "App_Title_a" | translate }}</span> {{ "App_Title_b" | translate }}
+  </h1>
 </header>
- 
+
 <img class="logo" src="assets/img/customerlogo.png" />
- 
+
 <main [ngClass]="{ error: error }">
   <ng-template [ngIf]="!ticket && error">
     <h2>{{ "App_ErrorOccuredHeader" | translate }}</h2>
@@ -19,10 +21,22 @@
     <article class="block1">
       <p>{{ "App_CallText" | translate }}</p>
       <h4>{{ ticket?.room }}</h4>
-      <p>{{ "App_TimeFormat" | translate: {date: (now | date : 'shortTime':undefined:locale)} }}</p>
+      <p>
+        {{
+          "App_TimeFormat"
+            | translate: { date: (now | date: "shortTime":undefined:locale) }
+        }}
+      </p>
     </article>
     <div class="number" class="block2">
-      <svg class="notch" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg>
+      <svg
+        class="notch"
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+      >
+        <g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g>
+      </svg>
       <h3>{{ "App_YourNumber" | translate }}</h3>
       <h4>{{ ticket?.number }}</h4>
     </div>
@@ -34,33 +48,90 @@
       <p>{{ "App_FinishedText1" | translate }}</p>
     </article>
     <div class="block2">
-      <svg class="notch" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg>
+      <svg
+        class="notch"
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+      >
+        <g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g>
+      </svg>
       <p>{{ "App_FinishedText2" | translate }}</p>
     </div>
   </ng-template>
   <!-- Waiting -->
-  <ng-template [ngIf]="!!ticket && ticket.state != WaitNumberState.Dismissed && ticket.state != WaitNumberState.Called">
-    <h2>{{ ticket?.title}}</h2>
+  <ng-template
+    [ngIf]="
+      !!ticket &&
+      ticket.state != WaitNumberState.Dismissed &&
+      ticket.state != WaitNumberState.Called
+    "
+  >
+    <h2>{{ ticket?.title }}</h2>
     <article class="block1">
       <div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 39.7 71.2">
-          <path class="cls-1" d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0" transform="translate(1)"/>
-          <path class="cls-1" d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0" transform="translate(1)"/>
-          <path class="cls-1" d="M38.7,21.5c0-3.9-2.8-7.2-6.8-8.7h0a7.52,7.52,0,0,1-9.4,0h-.1a11.67,11.67,0,0,0-3.1,1.7,9.15,9.15,0,0,1,5.1,7.9V38.8A4.34,4.34,0,0,1,22,42.1a4.4,4.4,0,0,1-1.6.2V66.1a3.5,3.5,0,0,0,7,0V41.9h.1V66.2a3.5,3.5,0,0,0,7,0V39.9a2.6,2.6,0,0,0,1.5.4,2.64,2.64,0,0,0,2.7-2.4h0V21.5Z" transform="translate(1)"/>
-          <path class="cls-1" d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z" transform="translate(1)"/>
-          <text class="cls-2" text-anchor="middle" transform="translate(12.5 34)">{{ ticket?.position }}</text>
+          <path
+            class="cls-1"
+            d="M11.6,14.3A6.51,6.51,0,0,0,18.1,8h0a6.38,6.38,0,0,0-6.5-6.3A6.45,6.45,0,0,0,5.1,8a6.51,6.51,0,0,0,6.5,6.3h0"
+            transform="translate(1)"
+          />
+          <path
+            class="cls-1"
+            d="M27,12.8a6.51,6.51,0,0,0,6.5-6.3h0a6.5,6.5,0,0,0-13,0A6.32,6.32,0,0,0,27,12.8h0"
+            transform="translate(1)"
+          />
+          <path
+            class="cls-1"
+            d="M38.7,21.5c0-3.9-2.8-7.2-6.8-8.7h0a7.52,7.52,0,0,1-9.4,0h-.1a11.67,11.67,0,0,0-3.1,1.7,9.15,9.15,0,0,1,5.1,7.9V38.8A4.34,4.34,0,0,1,22,42.1a4.4,4.4,0,0,1-1.6.2V66.1a3.5,3.5,0,0,0,7,0V41.9h.1V66.2a3.5,3.5,0,0,0,7,0V39.9a2.6,2.6,0,0,0,1.5.4,2.64,2.64,0,0,0,2.7-2.4h0V21.5Z"
+            transform="translate(1)"
+          />
+          <path
+            class="cls-1"
+            d="M23.3,23a9.15,9.15,0,0,0-5.1-7.9,8.86,8.86,0,0,0-1.7-.8h0a7.52,7.52,0,0,1-9.4,0H6.9C2.8,15.8,0,19.2,0,23V39.4H0a2.71,2.71,0,0,0,2.7,2.4,2.66,2.66,0,0,0,2.2-1.1v27A3.51,3.51,0,0,0,8.4,71h0a3.46,3.46,0,0,0,3.5-3.4V43.4H12V67.7a3.5,3.5,0,0,0,7,0V41.3l.3.1a2.66,2.66,0,0,0,1.2.3,2.64,2.64,0,0,0,2.7-2.4V35.2Z"
+            transform="translate(1)"
+          />
+          <text
+            class="cls-2"
+            text-anchor="middle"
+            transform="translate(12.5 34)"
+          >
+            {{ ticket?.position }}
+          </text>
         </svg>
-        <p>{{ "App_NumWaitingFormatRaw" | translate: { count: ticket?.position } }}</p>
-        <p *ngIf="(ticket?.position ?? 0) < 3"><b>{{ "App_StayClose" | translate }}</b></p>
+        <p>
+          {{
+            "App_NumWaitingFormatRaw" | translate: { count: ticket?.position }
+          }}
+        </p>
+        <p *ngIf="(ticket?.position ?? 0) < 3">
+          <b>{{ "App_StayClose" | translate }}</b>
+        </p>
         <p *ngIf="(ticket?.position ?? 0) >= 3">
-          <b>{{ "App_ComeBack" | translate }}</b><br>
-          <span *ngIf="showWaitTime">{{ "App_WaitingTimeFormatRaw" | translate: { min: toMinutes(ticket?.estimatedTimeOfCall)} }}</span>
+          <b>{{ "App_ComeBack" | translate }}</b
+          ><br />
+          <span *ngIf="showWaitTime">{{
+            "App_WaitingTimeFormatRaw"
+              | translate: { min: toMinutes(ticket?.estimatedTimeOfCall) }
+          }}</span>
         </p>
       </div>
-      <p>{{ "App_TimeFormat" | translate: {date: (now | date : 'shortTime':undefined:locale)} }}</p>
+      <p>
+        {{
+          "App_TimeFormat"
+            | translate: { date: (now | date: "shortTime":undefined:locale) }
+        }}
+      </p>
     </article>
     <div class="block2">
-      <svg class="notch" xmlns="http://www.w3.org/2000/svg" width="20" height="20"><g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g></svg>
+      <svg
+        class="notch"
+        xmlns="http://www.w3.org/2000/svg"
+        width="20"
+        height="20"
+      >
+        <g><path d="M 0.0,0.0 10.0,10.0 20.0,0.0 Z" /></g>
+      </svg>
       <h3>{{ "App_YourNumber" | translate }}</h3>
       <h4>{{ ticket?.number }}</h4>
     </div>
@@ -70,6 +141,6 @@
 <footer *ngIf="langs">
   <a *ngFor="let l of langs" (click)="setLanguage(l)">
     <span>{{ "lang_" + l | translate }}</span>
-    <img [src]="'assets/lang/' + l + '.png'">
+    <img [src]="'assets/lang/' + l + '.png'" />
   </a>
 </footer>
