--- a/5.0/printer/app_src/app/app.component.scss
+++ b/5.0/printer/app_src/app/app.component.scss
@@ -31,14 +31,14 @@ header {
     font-size: 1rem;
     margin: 0 0 0 0.5em;
     span {
-      text-transform:uppercase;
+      text-transform: uppercase;
     }
   }
 
   @media (orientation: landscape) {
     padding: 1vh 15vw;
     h1 {
-        font-size: .75rem;
+      font-size: 0.75rem;
     }
   }
 }
@@ -95,37 +95,42 @@ main {
   }
 
   background-color: $color-secondary-background;
-  color:$color-secondary-foreground;
+  color: $color-secondary-foreground;
 
   h2 {
     padding: 1vh 2vw;
-    font-size: .75rem;
+    font-size: 0.75rem;
     display: flex;
     justify-content: flex-end;
     align-items: center;
   }
   @media (orientation: landscape) {
     h2 {
-      font-size: .65rem;
-    } 
+      font-size: 0.65rem;
+    }
   }
-  .block1, .block2 {
+  .block1,
+  .block2 {
     padding: 1vh 2vw;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;;
+    justify-content: space-evenly;
   }
-  
+
   .block1 {
     font-size: 1rem;
     /* personenanzahl */
-    svg
-    {
+    svg {
       width: 20%;
       padding: 1vh 2vw;
       float: right;
-      .cls-1{fill:$color-secondary-foreground;}
-      .cls-2{font-size:1rem; fill:$color-highlight-foreground;}
+      .cls-1 {
+        fill: $color-secondary-foreground;
+      }
+      .cls-2 {
+        font-size: 1rem;
+        fill: $color-highlight-foreground;
+      }
     }
   }
 
@@ -150,14 +155,12 @@ main {
     }
   }
 
-  h3
-  {   
+  h3 {
     font-size: 1rem;
     font-weight: normal;
   }
 
-  h4
-  {
+  h4 {
     flex: 1;
     text-align: center;
     font-size: 2rem;
@@ -167,7 +170,7 @@ main {
   }
 
   &.error {
-    background-color:$color-highlight-background;
+    background-color: $color-highlight-background;
     color: $color-primary-foreground;
     text-align: center;
 
@@ -182,18 +185,17 @@ main {
   }
   &:not(.error) {
     h2 {
-      color:$color-primary-foreground;
+      color: $color-primary-foreground;
       background-color: $color-primary-background;
     }
     .block2 {
       background-color: $color-primary-background;
       color: $color-primary-foreground;
-    }  
+    }
   }
 }
 
-footer
-{
+footer {
   grid-column: 2;
   grid-row: 3;
   text-align: center;
@@ -214,7 +216,7 @@ footer
     width: 15%;
 
     img {
-      height: 100%;   
+      height: 100%;
     }
   }
 }
