--- a/5.0/printer/app_src/styles.scss
+++ b/5.0/printer/app_src/styles.scss
@@ -1,30 +1,30 @@
-
 @import "colors.scss";
 
-
 /* overwrite defaults */
-html, body, h2, h3, article, h4
-{
+html,
+body,
+h2,
+h3,
+article,
+h4 {
   margin: 0;
   padding: 0;
   overflow: hidden;
   text-overflow: ellipsis;
 }
- 
- /* global layout */
- html, body
- {
+
+/* global layout */
+html,
+body {
   background-color: $color-common-background;
   color: $color-common-foreground;
   font-family: Verdana, "Lucida Sans Unicode", sans-serif;
 
-  @media (orientation: landscape)
-  {
+  @media (orientation: landscape) {
     font-size: 2.5vw;
     height: 60vh;
   }
-  @media (orientation: portrait)
-  {
+  @media (orientation: portrait) {
     font-size: 4vw;
   }
 }
