--- a/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
+++ b/5.0/printer/src/app/handle-appointment/handle-appointment.component.scss
@@ -13,7 +13,7 @@
 h3 {
   grid-column: 1/3;
   font-size: 2em;
-  
+
   img {
     width: 5%;
   }
@@ -33,7 +33,6 @@ p {
   grid-row: 3;
 }
 
-
 figure {
   text-align: center;
 
@@ -43,8 +42,9 @@ figure {
   }
 
   a {
-    background: $color-secondary-foreground url(/assets/img/printer.png) no-repeat center;
-    display:block;
+    background: $color-secondary-foreground url(/assets/img/printer.png)
+      no-repeat center;
+    display: block;
     padding-bottom: 100%;
-  }  
+  }
 }
