--- a/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
+++ b/5.0/printer/src/app/scan-appointment/scan-appointment.component.html
@@ -1,5 +1,10 @@
 <section>
-  <img src="assets/img/direction.png" alt="direction">
+  <img src="assets/img/direction.png" alt="direction" />
   <h1>{{ "Appoint_Scan" | translate }}</h1>
 </section>
-<textarea id="scan" (keydown)="onScanInput($event)" fixedfocus spellcheck="false"></textarea>
+<textarea
+  id="scan"
+  (keydown)="onScanInput($event)"
+  fixedfocus
+  spellcheck="false"
+></textarea>
