--- a/5.0/printer/src/app/select-queue/select-queue.component.scss
+++ b/5.0/printer/src/app/select-queue/select-queue.component.scss
@@ -1,7 +1,7 @@
 @import "colors.scss";
 @import "mixins.scss";
 
-.title>h4 {
+.title > h4 {
   font-size: 1em;
   width: 40%;
   margin: 0 0 1vh 0;
@@ -19,15 +19,16 @@ table {
   }
   td {
     margin-bottom: 2vh;
-    vertical-align: top;;
+    vertical-align: top;
   }
-  td:nth-child(2), th:nth-child(2) {
+  td:nth-child(2),
+  th:nth-child(2) {
     border-left: 5vw solid transparent;
     width: 7vh;
   }
 
   /* variant by button count */
-  td { 
+  td {
     height: 7vh;
     .single-button {
       display: none;
@@ -38,7 +39,7 @@ table {
     .single-button {
       display: block;
     }
-    .btn>div.queue-status {
+    .btn > div.queue-status {
       grid-template-rows: 1fr 1fr;
     }
   }
@@ -53,26 +54,26 @@ table {
     &.open {
       box-shadow: 1px 3px 1px $color-secondary-shadow;
     }
-    &>svg {
+    & > svg {
       display: block;
       position: absolute;
       margin-top: 2vh;
       fill: $color-common-background;
     }
 
-    &>h5 {
+    & > h5 {
       flex-grow: 1;
       line-height: 7vh;
       font-weight: bold;
       font-size: 1.8em;
     }
 
-    &>div {
+    & > div {
       box-sizing: border-box;
       width: 30%;
       font-size: 0.9em;
     }
-    &.closed>div {
+    &.closed > div {
       background-color: $color-highlight-background;
       color: $color-highlight-foreground;
       font-weight: bold;
@@ -81,15 +82,15 @@ table {
       justify-content: center;
       padding: 0 0.5vw;
     }
-    &>div.queue-status {
+    & > div.queue-status {
       display: grid;
       grid-template-columns: 1fr 1fr;
-    
+
       align-items: center;
       background-color: $color-primary-background;
-      color:$color-primary-foreground;
+      color: $color-primary-foreground;
       fill: $color-common-foreground;
-      
+
       span {
         padding: 0 0.5vw;
       }
@@ -97,18 +98,18 @@ table {
         max-height: 80%;
         margin: 0 auto;
         .cls-1 {
-            fill: $color-primary-foreground;
+          fill: $color-primary-foreground;
         }
         .cls-2 {
-            color: $color-primary-background;
+          color: $color-primary-background;
         }
       }
 
-      .single-button  {
+      .single-button {
         grid-row: 2;
         grid-column: 1/3;
         line-height: 2vh;
-       
+
         img {
           opacity: 0.2;
           width: 50%;
@@ -118,7 +119,7 @@ table {
         }
       }
     }
-    &.next-one>.queue-status svg {
+    &.next-one > .queue-status svg {
       opacity: 0.5;
       .cls-2 {
         display: none;
