--- a/5.0/display/src/app/app.component.html
+++ b/5.0/display/src/app/app.component.html
@@ -1,14 +1,18 @@
 <header>
-  <img src="assets/img/plattformlogo.png" class="plattformlogo" alt="plattformlogo">
+  <img
+    src="assets/img/plattformlogo.png"
+    class="plattformlogo"
+    alt="plattformlogo"
+  />
   <h1>Wartebereich</h1>
 </header>
 
 <h2>Bitte warten Sie, bis Ihre Nummer erscheint:</h2>
-<table> 
+<table>
   <tbody>
-    <tr *ngFor="let x of list" [ngClass]="{ 'highlight': isHighlighted(x) }">
+    <tr *ngFor="let x of list" [ngClass]="{ highlight: isHighlighted(x) }">
       <td>
-        <img *ngIf="x.marked" src="assets/img/termin.png" alt="termin">
+        <img *ngIf="x.marked" src="assets/img/termin.png" alt="termin" />
       </td>
       <td>{{ x.number }}</td>
       <td>{{ x.room }}</td>
