--- a/5.0/styles/colors.scss
+++ b/5.0/styles/colors.scss
@@ -1,16 +1,13 @@
-
 /* All colors defined here */
 $color-primary-background: #53668d;
-$color-primary-shadowred:#53668D;
+$color-primary-shadowred: #53668d;
 $color-primary-foreground: white;
-$color-secondary-background:#d7d7d7;
-$color-secondary-foreground:#707173;
+$color-secondary-background: #d7d7d7;
+$color-secondary-foreground: #707173;
 $color-secondary-shadow: #c3c3c3;
-$color-primary-shadow:  #53668D;
+$color-primary-shadow: #53668d;
 $color-highlight-background: red;
 $color-highlight-foreground: white;
 $color-common-background: $color-primary-foreground;
 $color-common-foreground: $color-primary-background;
-$color-font-shadow:#707173e0;
-
-
+$color-font-shadow: #707173e0;
