--- a/5.0/display/src/app/app.component.scss
+++ b/5.0/display/src/app/app.component.scss
@@ -1,44 +1,53 @@
 @import "colors.scss";
 
 :host {
-  display: block;
-  padding: 0 5vw;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  display: grid;
+  grid-template-rows: 16vh 1fr auto 10vh;
 }
 
 header {
-  margin-bottom: 4vh;
-  height: 16vh;
+  margin: 0 15vw;
+  display: flex;
+  align-items: baseline;
+  gap: 3vw;
+
+  color: $color-primary-shadowred;
+
   img {
     height: 100%;
   }
   h1 {
-    display: inline;
     text-transform: uppercase;
+
     font-weight: 900;
-    font-size: 3.5em;
-    padding: 0 0 0 3vw;
-    color: $color-primary-shadowred;
+    font-size: 5em;
   }
 }
 
 h2 {
-  margin-bottom: 2vh;
-  text-align: left;
+  margin: 0 15vw;
   font-size: 2em;
   color: $color-primary-background;
+  font-weight: normal;
 }
 
 table {
-  width: 100%;
+  margin: 5vh 15vw 0vh 15vw;
   border-collapse: separate;
-  border-spacing: 0 1vh;
+  border-spacing: 0 2vh;
 
   td {
     background-color: $color-secondary-background;
     color: $color-secondary-foreground;
     box-shadow: 0.052vh 0.156vh 0.052vh $color-secondary-shadow;
 
-    font-size: 5rem;
+    font-size: 3.5rem;
     padding: 0vh 3vw;
   }
 
@@ -59,7 +68,55 @@ table {
     color: $color-primary-foreground;
   }
 }
+/*--- Layout: 1-2 Aufrufe ---*/
+.buttons-1,
+.buttons-2 {
+  margin: 15vh 15vw 10vh 15vw;
+  tr {
+    td {
+      font-size: 5rem;
+      padding: 2vh 3vw;
+    }
+  }
+}
+/*--- Layout: 3-5 Aufrufe ---*/
+.buttons-3,
+.buttons-4,
+.buttons-5 {
+  margin: 10vh 15vw 3vh 15vw;
+  tr {
+    td {
+      font-size: 5rem;
+    }
+  }
+}
+footer {
+  padding: 3vh 3vw;
+  align-self: end;
 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+
+  color: $color-secondary-foreground;
+  font-size: 2.5rem;
+
+  h5 {
+    font-weight: normal;
+  }
+  h5:first-child {
+    text-align: left;
+  }
+  h5:last-child {
+    text-align: right;
+  }
+
+  /* designo logo */
+  .logo {
+    width: 5vw;
+    fill: #e3e3e3;
+    justify-self: center;
+  }
+}
 .popup {
   position: absolute;
   top: 0;
@@ -73,9 +130,10 @@ table {
   h3 {
     font-size: 8rem;
     padding-top: 6rem;
+    font-weight: normal;
   }
   h4 {
-    font-size: 10rem;
-    margin-top: 20rem;
+    font-size: 20rem;
+    margin-top: 18rem;
   }
 }
