import / queueinfo: Auf chromium umgestellt

--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -116,7 +116,7 @@
 
   <style key="vocatis_import_appointments_2019_ts"
           file="ImportFromData.cshtml" preview="preview.png"
-         interactive="false" target="Forms2">
+         interactive="false" target="chromium">
     <names>
       <name culture="de">Vocatis Terminimport mit Zeitpunkt ({{version}})</name>
     </names>
@@ -135,7 +135,7 @@
   </style>
   <style key="vocatic_import_appointments_2019"
           file="ImportFromData.cshtml" preview="preview.png"
-         interactive="false" target="Forms2">
+         interactive="false" target="chromium">
     <names>
       <name culture="de">Vocatis Terminimport mit Zeit und Uhrzeit ({{version}})</name>
     </names>
