--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -66,6 +66,16 @@
     <text key="utc">Weltzeit (UTC)</text>
   </content_class>
 </field>
+<field key="datef">
+  <names>
+    <name>Datumsformat</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="de-de">Deutschland</text>
+    <text key="en-us">USA</text>
+    <text key="iso8601">ISO 8601</text>
+  </content_class>
+</field>
 <field key="name">
   <names>
     <name>Name</name>
